[metadata]
name = gitfaces
version = 0.3.0
author = Nico Schlömer
author_email = nico.schloemer@gmail.com
description = Fetch contributor avatars for a GitHub repository
url = https://github.com/nschloe/gitfaces
project_urls =
    Code=https://github.com/nschloe/gitfaces
    Issues=https://github.com/nschloe/gitfaces/issues
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0-or-later
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Multimedia :: Graphics
    Topic :: Software Development :: Version Control

[options]
packages = find:
install_requires =
    importlib_metadata;python_version<"3.8"
    GitPython
    Pillow
    requests
python_requires = >=3.5
setup_requires =
    setuptools>=42
    wheel

[options.entry_points]
console_scripts =
    gitfaces = gitfaces.cli:main
